--- a/force-app/main/default/aura/AccountList/AccountList.cmp
+++ b/force-app/main/default/aura/AccountList/AccountList.cmp
@@ -1,6 +1,6 @@
 <aura:component>
     <aura:attribute name="accounts" type="account[]" />
-    <aura:handler name="init" value="{!this}" action="{!c.doInit"} />
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <ul>
         <aura:iteration items="{!v.accounts}" var="account">
             <c:AccountListItem account="{!account}" />
