--- a/force-app/main/default/aura/AccountList/AccountList.cmp
+++ b/force-app/main/default/aura/AccountList/AccountList.cmp
@@ -1,4 +1,4 @@
-<aura:component>
+<aura:component controller="AccountController">
     <aura:attribute name="accounts" type="account[]" />
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <ul>
