--- a/force-app/main/default/aura/AccountList/AccountList.cmp
+++ b/force-app/main/default/aura/AccountList/AccountList.cmp
@@ -1,5 +1,7 @@
 <aura:component controller="AccountController">
+    <aura:registerEvent name-"AccountsLoaded" type="c:AccountsLoaded" />
     <aura:attribute name="accounts" type="account[]" />
+    <ltng:require styles="/resource/leadlet/leadlet.css" scripts="/resource/leadlet/leadlet.js" afterScriptsLoaded="{!c.doInit}" />
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <ul>
         <aura:iteration items="{!v.accounts}" var="account">
