--- a/force-app/main/default/aura/AccountLocator/AccountLocator.cmp
+++ b/force-app/main/default/aura/AccountLocator/AccountLocator.cmp
@@ -1,6 +1,8 @@
 <aura:component implements="force:appHostable">
     <div>
-        <div>AccountMap goes here</div>
+        <div>
+            <c:AccountMap/>
+        </div>
         <div>
             <c:AccountList/>
         </div>
